2000-03-30  Michael Snyder  <msnyder@cleaver.cygnus.com>

	* defs.h (struct continuation_arg): Make 'data' a union, to avoid
	casting problems when int and pointer are not the  same size.
	* event-top.c (command_handler): Use data as a union.
	(command_line_handler_continuation): Ditto.
	* infcmd.c (step_1_continuation): Use data as a union.  Re-indent.
	(step_once): ditto.  (finish_command_continuation): Ditto.
	(finish_command): Ditto.  
	* breakpoint.c (until_break_command): Use data as a union.
	(until_break_command_continuation): Ditto.
	* utils.c (add_intermediate_continuation): Fix typo in comment.

Thu Mar 30 12:09:50 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* gdbarch.h, gdbarch.c: Re-indent.  Remove FIXMEs.
	* gdbarch.sh: Re-sync with gdbarch.[hc].

2000-03-29  Daniel Berlin  <dan@cgsoftware.com>

	* minsyms.c (add_minsym_to_demangled_hash_table): New function.
	(install_minimal_symbols): Fix demangled symbol problems caused by
	using add_minsym_to_hash_table for the demangled names, which is
	wrong. Now we use add_minsym_to_demangled_hash_table.
	(lookup_minimal_symbol): Fix problems with demangled symbol lookup
	caused by weird control flow.
	* symtab.h: Add add_minsym_to_demangled_hash_table prototype here.

2000-03-29  Jason Merrill  <jason@casey.cygnus.com>

	* configure.in: -linux-gnu*, not -linux-gnu.

Tue Mar 28 18:28:40 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote.c (remote_threads_extra_info): Replace qfThreadExtraInfo
 	with qThreadExtraInfo.

2000-03-29  J.T. Conklin  <jtc@redback.com>

	* i386nbsd-nat.c (fetch_core_registers): Make static.

	* m68knbsd-nat.c (fetch_core_registers): Make static.
	(m68knbsd_core_fns, _initialize_m68knbsd_nat): Added.

Wed Mar 29 13:40:40 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* TODO: Update GDB 5 status.

Wed Mar 29 10:16:35 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* breakpoint.h (remove_hw_watchpoints): Add declaration.
	* breakpoints.c (remove_hw_watchpoints): Update.